--- a/templates/about.tmpl
+++ b/templates/about.tmpl
@@ -8,7 +8,7 @@
 			</header>
 			<section class="pt2 pb4">
 				<p class="f5 lh-copy measure-wide">
-					Stories Incognito asks readers to write about their lives, on topics in which they are the only authority.  Topics are intentionally wide-ranging to allow room for creativity and expression.
+					Sarcasm is the native language of the Internet. Unfortunately, since sarcasm is a close friend to cynicism, this can make the Internet a negative and disillusioned place. I decided to make an effort to make a place on the Internet that is more positive and reflective. This place would be where you can present your own story, anonymously and sincerely. The result was initially called &ldquo;Stories, Incognito&rdquo; but I later decided on the name &ldquo;<em>anonfiction</em>&rdquo; (i.e. anonymous + nonfiction), which is now live at <a href="https://www.anonfiction.com">www.anonfiction.com</a>. You can <a href="https://www.anonfiction.com/write">submit your story</a> right now, if you&rsquo;d like!
 				</p>
 				<p class="f5 lh-copy measure-wide">
 					Stories Incognito accepts all stories, as long as they are nonfiction. The style of writing is not as important as being genuine and thoughtful.
