--- a/templates/contact.tmpl
+++ b/templates/contact.tmpl
@@ -8,18 +8,39 @@
 			</header>
 			<section class="pt2 pb4">
 				<p class="f5 lh-copy measure-wide">
-					<span class="leader f4">anonfiction</span> is a place for creative anonymous nonfiction.
+					Sarcasm is the native language of the Internet. Unfortunately, since sarcasm is a close friend to cynicism, this can make the Internet a negative and disillusioned place. I decided to make an effort to make a place on the Internet that is more positive and reflective. This place would be where you can present your own story, anonymously and sincerely. The result was initially called &ldquo;Stories, Incognito&rdquo; but I later decided on the name &ldquo;<span class="leader f4">anonfiction</span>&rdquo; (i.e. anonymous + nonfiction), which is now live. You can <a href="https://www.anonfiction.com/write">submit your story</a> right now, if you&rsquo;d like!
 				</p>
 				<p class="f5 lh-copy measure-wide">
-					Our mission is similar to <a href="https://www.thesunmagazine.org/submit#readers-write">The Sun’s Reader’s Write</a>, <a href="http://brevitymag.com">Brevity Magazine</a>, <a href="https://www.creativenonfiction.org">Creative Nonfiction Magazine</a>, <a href="http://www.100wordstory.org">100 Word Stories</a>, <a href="https://1966journal.org">1966 Journal</a>, <a href="https://concis.io">Concis</a>, <a href="http://proximitymagazine.org">Proximity Magazine</a>, <a href="https://spartanlit.com">Spartan Literature</a>, and <a href="http://threadliterary.com">Thread Literary</a>. However, unlike these magazines, we are devoted to publishing great <em>anonymous</em> nonfiction where great writing can take place despite the name of the person who writes it.
+					<span class="leader f4">anonfiction</span> has a magazine format instead of resorting to a stream (or firehose) of content in other social media platforms. In a lot of ways, the mission of <span class="leader f4">anonfiction</span> is similar to other Internet magazines like <a href="https://www.thesunmagazine.org/submit#readers-write">The Sun&rsquo;s Reader&rsquo;s Write</a>, <a href="http://brevitymag.com">Brevity
+Magazine</a>, <a href="https://www.creativenonfiction.org">Creative Nonfiction Magazine</a>, <a href="http://www.100wordstory.org">100 Word Stories</a>, <a href="https://1966journal.org">1966
+Journal</a>, <a href="https://concis.io">Concis</a>, <a href="http://proximitymagazine.org">Proximity Magazine</a>, <a href="https://spartanlit.com">Spartan Literature</a>, and
+<a href="http://threadliterary.com">Thread Literary</a>. However, unlike these magazines, <span class="leader f4">anonfiction</span> is devoted to
+publishing great <em>anonymous</em> <em>nonfiction</em>.
+				</p>
+				<h3>Contributing</h3>
+				<p class="f5 lh-copy measure-wide">
+					Anyone can contribute to <span class="leader f4">anonfiction</span>. You can <a href="https://www.anonfiction.com/write">write a story online</a> or email a story to <a href="mailto:stories@anonfiction.com">stories@anonfiction.com</a>. If you write online you can log in to keep track of your stories. Contributed stories will be curated by editors who publish them after a brief grammar-correction and anonymization.
+				</p>
+				<p class="f5 lh-copy measure-wide">
+					Anyone can also comment on stories. However, the commenting process is the exact same as the story submission process. That is, comments will be collected for each topic and presented as their own topic at the end of each month. Each comment will be anonymized and grammar-corrected, and additionally it will be removed if it is clearly offensive.
+				</p>
+				<p class="f5 lh-copy measure-wide">
+					Anyone can also be an editor at <span class="leader f4">anonfiction</span>. To do so, just send an email to <a href="mailto:editors@anonfiction.com">editors@anonfiction.com</a>. At first we can correspond by email, and then after a brief period you will be added to the list of admins for the site.<
+				</p>
+				<h3>Open-source</h3>
+				<p class="f5 lh-copy measure-wide">
+					The web is inherently open-source (hit Ctl+U to see this page&rsquo;s source in Firefox). In line with this, <span class="leader f4">anonfiction</span> is also open-source. It is basically a CMS with some authentication. The code lives at <a href="https://github.com/schollz/anonfiction">github.com/schollz/anonfiction</a> and is licensed under MIT. It is written in Go and I&rsquo;m happy to help with questions about it.
 				</p>
 			</section>
 		</div>
 		<div class="fl pa3 bg-white black-70 measure-narrow f3 pv4">
-						<header class="bb b--black-70">
+			<header class="bb b--black-70">
 				<h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">
 				Contact</h3>
 			</header>
+			<p class="f5 lh-copy measure-wide">
+					Feel free to contact the editors at <a href="mailto:editors@anonfiction.com">editors@anonfiction.com</a>, or simply write us a message in the form below!
+				</p>
 			<form action="https://formspree.io/anonymousnonfiction@gmail.com" method="POST">
 				<div class="measure pv2 mt2">
 					<label for="keywords" class="f3 b db mb2 leader">Leave a message
