Update template with universal message

--- a/templates/all.tmpl
+++ b/templates/all.tmpl
@@ -1,4 +1,5 @@
 {{ template "header" . }}
+{{ template "messages" .}}
 <article data-name="article-full-bleed-background" class="ph5-ns" style="max-width: 67rem;">
 	<div class="cf" style="background: url(https://www.anonfiction.com/static/img/landing.jpg) no-repeat center center fixed; background-size: cover; ">
 		<div class="fl pa3 bg-white black-70 measure-narrow f3 pv4">
