--- a/templates/privacy.tmpl
+++ b/templates/privacy.tmpl
@@ -1,4 +1,6 @@
 {{ template "header" . }}
+{{ template "messages" .}}
+
 <section class="pa2 pv2 ph5-ns">
 	<article class="ph2 pb4">
 		<h1 class="db f1-l f2 mb1">Privacy Policy</h1>
