--- a/templates/topics.tmpl
+++ b/templates/topics.tmpl
@@ -1,4 +1,5 @@
 {{ template "header" . }}
+
 <article class="pv4 bg-lightest-blue dark-blue ph3 ph5-ns">
 	<h1 class="fw6 f3 f2-ns lh-title mt0 mb0">
 	Topics
@@ -19,6 +20,8 @@
 	</div>
 </span>
 </article>
+{{ template "messages" . }}
+
 <section class="ph3 ph5-ns pv1">
 <article class="pb4">
 	<h1 class="db f4 mb1">topic List</h1>
