Update promo, add description

--- a/templates/promo.tmpl
+++ b/templates/promo.tmpl
@@ -8,8 +8,15 @@
 			</header>
 			<section class="pt2 pb4">
 				<p class="f5 lh-copy measure-wide">
-					For a limited time...Sarcasm is the native language of the Internet. Unfortunately, since sarcasm is a close friend to cynicism, this can make the Internet a negative and disillusioned place. I decided to make an effort to make a place on the Internet that is more positive and reflective. This place would be where you can present your own
-				</p>
+					For a limited time we will pay you $1 for your nonfiction story. This is a first-come, first-serve, limited time offer.
+				</p>	
+				<p class="f5 lh-copy measure-wide">
+					If you are interested in applying for this offer, send a one-line story idea to <a href="mailto:stories@anonfiction.com">stories@anonfiction.com</a>. The editors will read your story idea and let you know whether or 
+					not we can use it. After recieving your story we will PayPal $1 to you.
+				</p>	
+				<p class="f5 lh-copy measure-wide">
+				You are, of course, always welcome to <a href="/write">submit your story online</a> which will be published no matter what.
+				</p>	
 			</section>
 		</div>
 		
