--- a/templates/navigation.tmpl
+++ b/templates/navigation.tmpl
@@ -16,10 +16,15 @@
 			<i data-feather="edit-2" class="dib h1 w1 v-mid"></i>
 			<span class="f6 pr2 v-mid">Write</span>
 		</a>
-		<a class="f6 fw4 hover-white no-underline white-70 dn dib pv2 ph1 v-mid" href="/topics">
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph1 v-mid" href="/topics">
 			<i data-feather="layers" class="dib h1 w1 v-mid"></i>
 			<span class="f6 pr2  v-mid">Topics</span>
 		</a>
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib pv2 ph1 v-mid" href="/guestbook">
+			<i data-feather="book-open" class="dib h1 w1 v-mid"></i>
+			<span class="f6 pr2  v-mid">Guestbook</span>
+		</a>
+
 		{{ if .SignedIn }}
 		<a class="f6 fw4 hover-white no-underline white-70 dn dib pv2 ph1 v-mid" href="/profile">
 			<i data-feather="user" class="dib h1 w1 v-mid"></i>
@@ -36,7 +41,7 @@
 									<i data-feather="help-circle" class="dib h1 w1"></i>
 									<span class="f6 pr2">About</span>
 		</a> -->
-		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l dib-m pv2 ph1 v-mid" href="/rss.xml">
+		<a class="f6 fw4 hover-white no-underline white-70 dn dib-l pv2 ph1 v-mid" href="/rss.xml">
 			<i data-feather="radio" class="dib h1 w1 v-mid"></i>
 			<span class="f6 pr2  v-mid">feed</span>
 		</a>
