--- a/templates/navigation.tmpl
+++ b/templates/navigation.tmpl
@@ -9,7 +9,7 @@
 	{{ end }}
 	<div class="dtc v-mid tr pa3 v-mid">
 		<a class="f6 fw4 hover-white no-underline white-70 dib pv2 ph1 v-mid" href="/stories">
-			<i data-feather="book" class="dib h1 w1 v-mid"></i>
+			<i data-feather="eye" class="dib h1 w1 v-mid"></i>
 			<span class="f6 pr2 v-mid">Read</span>
 		</a>
 		<a class="f6 fw4 hover-white no-underline white-70 dib pv2 ph1 v-mid" href="/write">
@@ -21,7 +21,7 @@
 			<span class="f6 pr2  v-mid">Topics</span>
 		</a>
 		<a class="f6 fw4 hover-white no-underline white-70 dn dib pv2 ph1 v-mid" href="/guestbook">
-			<i data-feather="book-open" class="dib h1 w1 v-mid"></i>
+			<i data-feather="book" class="dib h1 w1 v-mid"></i>
 			<span class="f6 pr2  v-mid">Guestbook</span>
 		</a>
 
