--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -1,93 +1,94 @@
 {{ define "header" }}
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!-- COMMON TAGS -->
-		<meta charset="utf-8">
-		<title>anonfiction</title>
-		<!-- Search Engine -->
-		<meta name="description" content="{{ if .Story.Description }}{{ .Story.Description}}{{else}}Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.{{ end }}">
-		<meta name="image" content="https://www.anonfiction.com/static/img/logo.jpg">
-		<!-- Schema.org for Google -->
-		<meta itemprop="name" content="anonfiction">
-		<meta itemprop="description" content="{{ if .Story.Description }}{{ .Story.Description}}{{else}}Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.{{ end }}">
-		<meta itemprop="image" content="https://www.anonfiction.com/static/img/logo.jpg">
-		<!-- Twitter -->
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:title" content="anonfiction">
-		<meta name="twitter:description" content="Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.">
-		<meta name="twitter:site" content="@anonfictionmag">
-		<meta name="twitter:creator" content="@anonfictionmag">
-		<meta name="twitter:image:src" content="https://www.anonfiction.com/static/img/logo.jpg">
-		<!-- Open Graph general (Facebook, Pinterest & Google+) -->
-		<meta name="og:title" content="anonfiction">
-		<meta name="og:description" content="{{ if .Story.Description }}{{ .Story.Description}}{{else}}Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.{{ end }}">
-		<meta name="og:image" content="https://www.anonfiction.com/static/img/logo.jpg">
-		<meta name="og:url" content="https://www.anonfiction.com">
-		<meta name="og:site_name" content="anonfiction">
-		<meta name="og:locale" content="en_US">
-		<meta name="og:type" content="website">
-		<link rel="apple-touch-icon" sizes="57x57" href="/static/img/meta/apple-icon-57x57.png">
-		<link rel="apple-touch-icon" sizes="60x60" href="/static/img/meta/apple-icon-60x60.png">
-		<link rel="apple-touch-icon" sizes="72x72" href="/static/img/meta/apple-icon-72x72.png">
-		<link rel="apple-touch-icon" sizes="76x76" href="/static/img/meta/apple-icon-76x76.png">
-		<link rel="apple-touch-icon" sizes="114x114" href="/static/img/meta/apple-icon-114x114.png">
-		<link rel="apple-touch-icon" sizes="120x120" href="/static/img/meta/apple-icon-120x120.png">
-		<link rel="apple-touch-icon" sizes="144x144" href="/static/img/meta/apple-icon-144x144.png">
-		<link rel="apple-touch-icon" sizes="152x152" href="/static/img/meta/apple-icon-152x152.png">
-		<link rel="apple-touch-icon" sizes="180x180" href="/static/img/meta/apple-icon-180x180.png">
-		<link rel="icon" type="image/png" sizes="192x192"  href="/static/img/meta/android-icon-192x192.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/static/img/meta/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="96x96" href="/static/img/meta/favicon-96x96.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/static/img/meta/favicon-16x16.png">
-		<link rel="manifest" href="/static/img/meta/manifest.json">
-		<meta name="msapplication-TileColor" content="#00449e">
-		<meta name="msapplication-TileImage" content="/static/img/meta/ms-icon-144x144.png">
-		<meta name="theme-color" content="#00449e">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="/static/css/pretachyon.css">
-		<link rel="stylesheet" href="/static/css/tachyons.min.css">
-		<link rel="stylesheet" href="/static/css/style.css">
-		<script src="/static/js/feather.min.js"></script>
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-2345677-20"></script>
-		<script>
-		  window.dataLayer = window.dataLayer || [];
-		  function gtag(){dataLayer.push(arguments);}
-		  gtag('js', new Date());
 
-		  gtag('config', 'UA-2345677-20');
-		</script>
+<head>
+    <!-- COMMON TAGS -->
+    <meta charset="utf-8">
+    <title>anonfiction</title>
+    <!-- Search Engine -->
+    <meta name="description" content="{{ if .Story.Description }}{{ .Story.Description}}{{else}}Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.{{ end }}">
+    <meta name="image" content="https://www.anonfiction.com/static/img/logo.jpg">
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="anonfiction">
+    <meta itemprop="description" content="{{ if .Story.Description }}{{ .Story.Description}}{{else}}Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.{{ end }}">
+    <meta itemprop="image" content="https://www.anonfiction.com/static/img/logo.jpg">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="anonfiction">
+    <meta name="twitter:description" content="Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.">
+    <meta name="twitter:site" content="@anonfictionmag">
+    <meta name="twitter:creator" content="@anonfictionmag">
+    <meta name="twitter:image:src" content="https://www.anonfiction.com/static/img/logo.jpg">
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="anonfiction">
+    <meta name="og:description" content="{{ if .Story.Description }}{{ .Story.Description}}{{else}}Read a story, leave a story. Beautiful anonymous nonfiction stories from real people.{{ end }}">
+    <meta name="og:image" content="https://www.anonfiction.com/static/img/logo.jpg">
+    <meta name="og:url" content="https://www.anonfiction.com">
+    <meta name="og:site_name" content="anonfiction">
+    <meta name="og:locale" content="en_US">
+    <meta name="og:type" content="website">
+    <link rel="apple-touch-icon" sizes="57x57" href="/static/img/meta/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/static/img/meta/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/static/img/meta/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/static/img/meta/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/static/img/meta/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/static/img/meta/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/static/img/meta/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/static/img/meta/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/static/img/meta/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/static/img/meta/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/static/img/meta/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/static/img/meta/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/static/img/meta/favicon-16x16.png">
+    <link rel="manifest" href="/static/img/meta/manifest.json">
+    <meta name="msapplication-TileColor" content="#00449e">
+    <meta name="msapplication-TileImage" content="/static/img/meta/ms-icon-144x144.png">
+    <meta name="theme-color" content="#00449e">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="/static/css/pretachyon.css">
+    <link rel="stylesheet" href="/static/css/tachyons.min.css">
+    <link rel="stylesheet" href="/static/css/style.css">
+    <script src="/static/js/feather.min.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-2345677-20"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
 
-	</head>
-	<body id="touchsurface">
-		<header class="sans-serif">
-			<div class="cover bg-left bg-center-l" {{ if .Landing }}style="background-image: url(/static/img/bisons.jpg)" {{end}}>
-				<div class="bg-black-80 {{ if .Landing }}pb5 pb6-m pb7-l{{end}} ph5-ns">
-					{{ template "navigation" . }} {{ if .Landing }}
-					<div class="mt4 mt5-m mt6-l ph3" style="max-width: 58rem;">
-						<h1 class="f2 f1-m f1-l fw2 white-90 mb0 lh-title" id="landingtitle">
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-2345677-20');
+    </script>
+</head>
+
+<body id="touchsurface">
+    <header class="sans-serif">
+        <div class="cover bg-left bg-center-l" {{ if .Landing }}style="background-image: url(/static/img/bisons.jpg)" {{end}}>
+            <div class="bg-black-80 {{ if .Landing }}pb5 pb6-m pb7-l{{end}} ph5-ns">
+                {{ template "navigation" . }} {{ if .Landing }}
+                <div class="mt4 mt5-m mt6-l ph3" style="max-width: 58rem;">
+                    <h1 class="f2 f1-m f1-l fw2 white-90 mb0 lh-title" id="landingtitle">
 						anonymous nonfiction
 						</h1>
-						<h2 class="fw1 f3 white-80 mt3 mb4">
+                    <h2 class="fw1 f3 white-80 mt3 mb4">
 						<span>A magazine for creative Anonymous Nonfiction.</span>
 						</h2>
-						<a class="f6 f5-m f4-l no-underline grow dib v-mid bg-blue white ba b--blue ph4 pv3 mb3" href="/read/topic/"><strong>read a story</strong></a>
-						<span class="dib v-mid ph3 white-70 mb3">or</span>
-						<a class="f6 f5-m f4-l no-underline grow dib v-mid white ba b--white ph4 pv3 mb3" href="/write"><strong>write a story</strong></a>
-					</div>
-					{{ end}}
-				</div>
-			</div>
-			<script src="/static/js/jquery.min.js"></script>
-		</header>
-		{{ if .Landing }}
-		<script>
-			$(function() {
-			  $('#landingtitle').delay(2000).fadeOut(1000, function() {
-			    $(this).text('Anonfiction').fadeIn(1000);
-			  });
-			});
-		</script>
-		{{ end }}
-		{{ end }}
+                    <a class="f6 f5-m f4-l no-underline grow dib v-mid bg-blue white ba b--blue ph4 pv3 mb3" href="/read/topic/"><strong>read a story</strong></a>
+                    <span class="dib v-mid ph3 white-70 mb3">or</span>
+                    <a class="f6 f5-m f4-l no-underline grow dib v-mid white ba b--white ph4 pv3 mb3" href="/write"><strong>write a story</strong></a>
+                </div>
+                {{ end}}
+            </div>
+        </div>
+        <script src="/static/js/jquery.min.js"></script>
+    </header>
+    {{ if .Landing }}
+    <script>
+    $(function() {
+        $('#landingtitle').delay(2000).fadeOut(1000, function() {
+            $(this).text('Anonfiction').fadeIn(1000);
+        });
+    });
+    </script>
+    {{ end }} {{ end }}
