--- a/templates/landing.tmpl
+++ b/templates/landing.tmpl
@@ -16,7 +16,7 @@
 			</header>
 			<section class="pv2">
 				<p class="f5 lh-copy measure-wide">
-					<span class="leader f4"><strong>anonfiction</strong></span> is a minimalist online magazine for sharing short creative nonfiction stories, anonymously. There is no subscription, no ads, and no internet comments -  you will not be judged.
+					<span class="leader f4"><strong>anonfiction</strong></span> is a minimalist online magazine for sharing short creative nonfiction stories, anonymously. There is no subscription, no ads, and no judgement.
 				</p>
 				<p class="f5 lh-copy measure-wide">
 					All the stories are from real people, but names are withheld to promote honesty and sincerity. We aim to bring together stories from all across the world from all walks of life to remind us of the beauty and struggle in humanity and the importance of small moments in our lives.
@@ -29,7 +29,7 @@
 			</header>
 			<section class="pt2 pb4">
 				<p class="f5 lh-copy measure-wide">
-					<span class="leader f4"><strong>anonfiction</strong></span> asks readers to write about their own everyday experiences as they pertain to any one of a set of topics.  Topics are intentionally wide-ranging to allow room for creativity and expression.
+					<span class="leader f4"><strong>anonfiction</strong></span> asks readers to write about their own everyday experiences as they pertain to any one of a set of <a href="/topics">topics</a>.  Topics are intentionally wide-ranging to allow room for creativity and expression.
 				</p>
 				<p class="f4 lh-copy measure-wide">
 					All stories are accepted, as long as they are nonfiction. The style of writing is not as important as being genuine and thoughtful. There is no word limit.
