--- a/templates/promo.tmpl
+++ b/templates/promo.tmpl
@@ -12,7 +12,7 @@
 				</p>	
 				<p class="f5 lh-copy measure-wide">
 					If you are interested in applying for this offer, send a one-line story idea to <a href="mailto:stories@anonfiction.com">stories@anonfiction.com</a>. The editors will read your story idea and let you know whether or 
-					not we can use it. After recieving your story we will PayPal $1 to you.
+					not we can use it. If we can use it, you can submit the story to us and we will PayPal $1 to you.
 				</p>	
 				<p class="f5 lh-copy measure-wide">
 				You are, of course, always welcome to <a href="/write">submit your story online</a> which will be published no matter what.
