Make replies accessible from /stories

--- a/templates/all.tmpl
+++ b/templates/all.tmpl
@@ -19,6 +19,9 @@
 				</span>
 				{{ end }}
 				{{ end }}
+				<span class="f4 leader db lh-copy center pv2 fw6 tc measure">
+					<i data-feather="arrow-up-circle" class="dib h1 w1 v-mid"></i> <a href="/read/topic/reply-to-{{ $e.Name | slugify }}">Replies</a> 
+				</span>
 			</section>
 			{{ end }}
 		</div>
