--- a/templates/contact.tmpl
+++ b/templates/contact.tmpl
@@ -32,7 +32,7 @@ Journal</a>, <a href="https://concis.io">Concis</a>, <a href="http://proximityma
                         </p>
             </section>
         </div>
-        <div class="fl pa3 bg-white black-70 measure-narrow f3 pv4">
+        <div class="fl pa3 bg-white black-70 measure-narrow f3 pv4" id="contact">
             <header class="bb b--black-70">
                 <h3 class="f2 fw7 ttu tracked lh-title mt0 mb3 avenir">
 				Contact</h3>
