--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -2,9 +2,11 @@
 <footer class="pv4 ph5-ns mid-gray ph3 ">
 	<small class="f6 db">© 2017 <b class="ttu leader f4">anonfiction</b>, All Rights Reserved</small>
 	<div class="mt3">
-		<a href="/terms/"    title="Terms" class="f6 dib ph2 link mid-gray dim">Terms of Use</a>
-		<a href="/privacy/"  title="Privacy" class="f6 dib ph2 link mid-gray dim">Privacy</a>
-		<a href="/about/"  title="Contact" class="f6 dib ph2 link mid-gray dim">About + Contact</a>
+		<a href="/terms/"    title="Terms" class="f6 dib ph2 link mid-gray dim"><i data-feather="alert-circle" class="dib h1 w1 v-mid"></i> Terms of Use</a>
+		<a href="/privacy/"  title="Privacy" class="f6 dib ph2 link mid-gray dim"><i data-feather="eye-off" class="dib h1 w1 v-mid"></i> Privacy</a>
+		<a href="/about/"  title="Contact" class="f6 dib ph2 link mid-gray dim"><i data-feather="heart" class="dib h1 w1 v-mid"></i> About</a>
+		<a href="/about/#contact"  title="Contact" class="f6 dib ph2 link mid-gray dim"><i data-feather="phone" class="dib h1 w1 v-mid"></i> Contact</a>
+		<a href="https://github.com/schollz/anonfiction"  title="Github" class="f6 dib ph2 link mid-gray dim"><i data-feather="github" class="dib h1 w1 v-mid"></i> Source</a>
 	</div>
 </footer>
 <script>
