Update promo and terms

--- a/templates/promo.tmpl
+++ b/templates/promo.tmpl
@@ -14,8 +14,11 @@
 					If you are interested in applying for this offer, send a one-line story idea and the price to <a href="mailto:stories@anonfiction.com">stories@anonfiction.com</a>. The editors will read your story idea and let you know whether or 
 					not we can use it. If we can use it, you can submit the story to us and we will PayPal you the cost of your story.
 				</p>	
+				<p class="f5 lh-copy measure">
+				Can't determine a price? We typically pay $3-4 for most stories. You should be the sole authority for your story, so research and fact-checking is not nessecary. Stories are brief - around 500 words. Therefore, you should only be spending about 15 minutes to write your story - which is about $12 / hour which is a reasonable price. But please feel free to name your own price.
+				</p>
 				<p class="f5 lh-copy measure-wide">
-				You are, of course, always welcome to <a href="/write">submit your story online</a> which will be published no matter what.
+				You are, of course, always welcome to <a href="/write">submit your story online</a> which will be published no matter what. The longterm ideal of <em>anonfiction</em> is to <em>“read a story, write a story”</em>.				<strong>Ideally, <em>anonfiction</em> should be self-perpetuating through people's goodwill and willingness to share their stories and enjoyment in reading the stories of others.</strong>
 				</p>	
 			</section>
 		</div>
