--- a/templates/terms.tmpl
+++ b/templates/terms.tmpl
@@ -6,28 +6,98 @@
 		<h1 class="db f1-l f2 mb1">Terms of Use</h1>
 		<span class="f5 db lh-copy measure-wide">
 			<h2>Terms</h2>
-			By accessing this web site, you are agreeing to be bound by these web site Terms and Conditions of Use, all applicable laws and regulations, and agree that you are responsible for compliance with any applicable local laws. If you do not agree with any of these terms, you are prohibited from using or accessing this site. The materials contained in this web site are protected by applicable copyright and trade mark law.
+		This agreement is a legal contract between you and us. You acknowledge that you have read, understood, and agree to be bound by the terms of this agreement. If you do not agree to this agreement, you should not use <em>anonfiction</em>. Please take a look at privacy policy too—it explains how we collect and use your information.
 			<h2>Use</h2>
-			Permission is granted to temporarily download one copy of the materials (information or software) on asdf's web site for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and under this license you may not:
-			modify or copy the materials;
-			use the materials for any commercial purpose, or for any public display (commercial or non-commercial);
-			attempt to decompile or reverse engineer any software contained on asdf's web site;
-			remove any copyright or other proprietary notations from the materials; or
-			transfer the materials to another person or "mirror" the materials on any other server.
-			This license shall automatically terminate if you violate any of these restrictions and may be terminated by asdf at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.
-			<h2>Disclaimer</h2>
-			The materials on <span class="leader f4">anonfiction</span>'s web site are provided "as is". <span class="leader f4">anonfiction</span> makes no warranties, expressed or implied, and hereby disclaims and negates all other warranties, including without limitation, implied warranties or conditions of merchantability, fitness for a particular purpose, or non-infringement of intellectual property or other violation of rights. Further, <span class="leader f4">anonfiction</span> does not warrant or make any representations concerning the accuracy, likely results, or reliability of the use of the materials on its Internet web site or otherwise relating to such materials or on any sites linked to this site.
-			<h2>Limitations</h2>
-			In no event shall <span class="leader f4">anonfiction</span> or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials on <span class="leader f4">anonfiction</span>'s Internet site, even if <span class="leader f4">anonfiction</span> or a <span class="leader f4">anonfiction</span> authorized representative has been notified orally or in writing of the possibility of such damage. Because some jurisdictions do not allow limitations on implied warranties, or limitations of liability for consequential or incidental damages, these limitations may not apply to you.
-			<h2>Revisions and Errata</h2>
-			The materials appearing on <span class="leader f4">anonfiction</span>'s web site could include technical, typographical, or photographic errors. <span class="leader f4">anonfiction</span> does not warrant that any of the materials on its web site are accurate, complete, or current. <span class="leader f4">anonfiction</span> may make changes to the materials contained on its web site at any time without notice. <span class="leader f4">anonfiction</span> does not, however, make any commitment to update the materials.
-			<h2>Links</h2>
-			<span class="leader f4">anonfiction</span> has not reviewed all of the sites linked to its Internet web site and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by <span class="leader f4">anonfiction</span> of the site. Use of any such linked web site is at the user's own risk.
-			<h2>Site Terms of Use Modiciations</h2>
-			<span class="leader f4">anonfiction</span> may revise these terms of use for its web site at any time without notice. By using this web site you are agreeing to be bound by the then current version of these Terms and Conditions of Use.
-			<h2>Governing Law</h2>
-			Any claim relating to <span class="leader f4">anonfiction</span>'s web site shall be governed by the laws of the State of North Carolina without regard to its conflict of law provisions.
-			General Terms and Conditions applicable to Use of a Web Site.
+			<em>anonfiction</em> is designed and supported for personal use only. You may not use <em>anonfiction</em> to break the law, violate an individual's privacy, or infringe any person or entity’s intellectual property or any other proprietary rights.
+<br><br>
+			<em>anonfiction</em> is intended to be a place for your entertainment. We are not responsible for any decisions you make based on something you read on <em>anonfiction</em>.
+<br><br>
+			Without advance notice and at any time, we may, for violations of this agreement or for any other reason we choose: suspend your access to <em>anonfiction</em>, and/or remove any of your User Content from <em>anonfiction</em>.
+			
+We reserve the right to monitor <em>anonfiction</em>, and your use of the Service means you agree to such monitoring. At the same time, we do not guarantee we will monitor at all.
+<br><br>
+
+
+To participate on <em>anonfiction</em>, you may create an account that includes your email. Of course, you can also browse <em>anonfiction</em> and submit stories without logging in. You are solely responsible for the information associated with Your Account and anything that happens related to Your Account. You may not license, transfer, sell, or assign Your Account without our written approval.
+<br><br>
+<h2>anonfiction content</h2>
+<em>anonfiction</em> contains graphics, text, photographs, images, video, audio, software, code, website compilation, website "look and feel," and advertisements supplied by us or our licensors, which we call "<em>anonfiction</em> content." <em>anonfiction</em> content is protected by intellectual property laws including copyright and other proprietary rights of the United States and foreign countries.
+<br><br>
+We grant you the right to access the <em>anonfiction</em> content in the manner described in this agreement. You may not otherwise make unauthorized commercial use of, reproduce, prepare derivative works, distribute copies, perform, or publicly display <em>anonfiction</em> content, except as permitted by the doctrine of fair use or as authorized in writing by us. If you are interested in licensing <em>anonfiction</em> content, learn more by reading our licensing page and contact us at licensing@anonfiction.com.
+<h2>your content</h2>
+You retain the rights to your copyrighted content or information that you submit to <em>anonfiction</em> ("user content") except as described below.
+
+<br><br>
+By submitting user content to <em>anonfiction</em>, you grant us a royalty-free, perpetual, irrevocable, non-exclusive, unrestricted, worldwide license to reproduce, prepare derivative works, distribute copies, perform, or publicly display your user content in any medium and for any purpose, including commercial purposes, and to authorize others to do so.
+
+<br><br>
+You agree that you have the right to submit anything you post, and that your user content does not violate the copyright, trademark, trade secret or any other personal or proprietary right of any other party.
+
+<br><br>
+Please take a look at <em>anonfiction</em>’s privacy policy for an explanation of how we may use or share information submitted by you or collected from you.
+<br><br>
+We take no responsibility for, we do not expressly or implicitly endorse, and we do not assume any liability for any user content submitted by you to <em>anonfiction</em>.
+<br><br>
+<em>anonfiction</em> is a place with many third-party hyperlinks posted by users like you. We are not responsible for the content or actions of any third party websites or services associated with posted links. You agree to take sole legal responsibility for any links you post, and neither this agreement nor our privacy policy applies to any content on other websites related to those links. You should consult the terms and privacy policies of those other websites to understand your rights.
+
+<h2>rules</h2>
+You also agree to follow the <em>anonfiction</em> Content Policy. These guidelines are intended to keep people safe, protect kids, keep <em>anonfiction</em> running, and to encourage personal responsibility for what you do on <em>anonfiction</em>. 
+<br></br>
+
+While <em>anonfiction</em> generally provides a lot of leeway in what content is acceptable, here are some guidelines for content that is not. Please keep in mind the spirit in which these were written, and know that looking for loopholes is a waste of time.
+
+<br></br>
+
+Content is prohibited if it
+
+<ul>
+<li>Is illegal</li>
+<li>Encourages or incites violence</li>
+<li>Threatens, harasses, or bullies or encourages others to do so</li>
+<li>Is personal and confidential information</li>
+<li>Impersonates someone in a misleading or deceptive manner</li>
+<li>Is spam</li>
+</ul>
+    
+
+<em>anonfiction</em> is not directed at people under the age of 13, and <em>anonfiction</em> does not knowingly collect any personal information from such people. If you know that a user under the age of 13 is accessing <em>anonfiction</em>, please contact us here.
+
+<h2>responsibility</h2>
+All the things you do and all the information you submit or post to <em>anonfiction</em> remain your responsibility. Indemnity is basically a way of saying that you will not hold us legally liable for any of your user content or actions that infringe the law or the rights of a third party or person in any way.
+
+<br><br>
+Specifically, you agree to hold <em>anonfiction</em>, its affiliates, officers, directors, employees, agents, and third party service providers harmless from and defend them against any claims, costs, damages, losses, expenses, and any other liabilities, including attorneys’ fees and costs, arising out of or related to your access to or use of <em>anonfiction</em>, your violation of this user agreement, and/or your violation of the rights of any third party or person.
+
+
+<h2>disclaimer of warranties</h2>
+<em>anonfiction</em> is provided "as is" and without warranty of any kind. To the maximum extent permitted by law, we and our affiliates and third party service providers disclaim any and all warranties, express or implied, including (but not limited to) implied warranties of merchantability, fitness for a particular purpose, and non-infringement of proprietary rights, or any other warranty, condition, guarantee or representation, whether oral or electronic. You are solely responsible for any damage to your computer or mobile device, loss of use, or loss of your user content. We do not guarantee that <em>anonfiction</em> will always work properly.
+
+<h2>limitation of liability</h2>
+We will not be liable for any special, consequential, indirect, incidental, punitive, reliance, or exemplary damages, whether in tort, contract, or any other legal theory, arising out of or in any way connected with this agreement or your use of or attempt to use <em>anonfiction</em>, including (but not limited to) damages for loss of profits, goodwill, use, or data. This limitation on liability shall not be affected even if we have been advised of the possibility of such damages. Some states do not allow for the exclusion of implied warranties or the limitation or exclusion of liability for incidental or consequential damages, so the above exclusions may not apply to you. You may have other rights that vary from state to state.
+<br><br>
+You agree to release us, our affiliates, and third-party service providers, and each associated director, employee, agents, and officers, from claims, demands and damages (actual and consequential), of every kind and nature, known and unknown, disclosed or undisclosed, arising out of or in any way connected to your use of <em>anonfiction</em>.
+
+<h2>governing law</h2>
+
+We want you to enjoy <em>anonfiction</em>, so if you have an issue or dispute, you agree to raise it and try to resolve it with us informally. You can contact us with feedback and concerns here or by emailing us at contact@<em>anonfiction</em>.com.
+<br>
+<br>
+The headings in this agreement are for convenience and do not control any of its provisions.
+<br>
+<br>
+Any claim or dispute between you and us arising out of or relating to this user agreement, in whole or in part, shall be governed by the laws of the State of California without respect to its conflict of laws provisions. We agree and you agree to submit to the personal jurisdiction and venue of the state and federal court located in San Francisco County, California.
+severability and enforcement.
+<br>
+<br>
+If any provision of this user agreement is held invalid or unenforceable, that provision will be modified to the extent necessary to render it enforceable without losing its intent. If no such modification is possible, that provision will be severed from the rest of this agreement.
+
+<br>
+<br>
+If we do not enforce any right or provision in this user agreement, that is not to be deemed a waiver of our right to do so in the future.
+
+<h2>changes to this user agreement</h2>
+
+This user agreement is the entire agreement between you and us concerning <em>anonfiction</em>. It supersedes all prior or contemporaneous agreements between you and us. We may modify this user agreement at any time. If we make changes to this agreement that materially affect your rights, we will provide advance notice and keep this edition available as an archive on the <em>anonfiction</em> website. By continuing to use <em>anonfiction</em> after a change to this agreement, you agree to those changes.
 		</span>
 	</article>
 </section>
